added an upload icon

--- a/xplayer.html
+++ b/xplayer.html
@@ -25,11 +25,11 @@
                 ><img src="./assets/imgs/play.png" height="20" width="20"/></span
               >yer
             </center>
-            <center><small>A minimalistic Web Audio Player</small></center>
+            <center><small>A minimal Web Audio Player</small></center>
           </h4>
         </div>
         <section id="playlist" class="pt-2 float-left mt-4">
-          <div class="wrapper">
+          <div>
             <input type="file" id="music" multiple />
             <ul id="song-list" class="w-100 pt-2 px-2 m-0 mb-4"></ul>
           </div>
@@ -41,7 +41,7 @@
             </figcaption>
             <p class=" m-0 mt-2">
               <img
-                src="./assets/imgs/vlc.png"
+                src="./assets/imgs/folder2.png"
                 id="upload"
                 height="40"
                 width="40"
