--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
 					navigator.serviceWorker
-						.register("./Xplayer/sw.js")
+						.register("./sw.js")
 						.then((reg) => console.log("Registered"))
 						.catch((err) => console.log("Registration failed: ", err));
 				});
