--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						width="22" class="align-middle" />
 					</div>
 					<div class="d-none">
-						<input type="file" id="music" multiple />
+						<input type="file" id="music" multiple accept="audio/*" />
 						<audio controls id="xplayer"></audio>
 					</div>
 					<div class="card-body px-2" style="background-color: #000000c4;">
